2009-02-17
Finished adding db_diskimage, time for some curl! for downloading movie information
Fixed db_archive and db_diskimage, there was a problem with showing the directory because it was acting like the fs_ version which is completely different

2009-02-16
Worked on fs_imagedisk, outputting files works now
Worked on some more organization
Db_archive now fully functional, archives are searchable and in the database
Made the pretty dirs for the plugins the same for every plugins, links must now be specified in the template as /<plugin>/<category>/<id>/<filename>

2009-02-11
Added fs_ modules for handling reading files off the filesystem, this should make the use of a database a lot more modular
Fixed broken plugins from the fs_ modules change.
Fixed broken plugins by adding a little requirement to aliasing, in order to show bottom level directories an alias must match ^/$ alone
getIDsFromRequest() is only accessed by modules
Downloading files with database turned off works by using a hex encoded pathname to the file, it is automatically decoded by getIDsFromRequest() and each modules $request['selected'] handler
All plugins use the appropriate modules for getting file information
File.php plugin uses modules fully now
Cron.php plugin doesn't run if not using a database
Modules are now required to start with db_ for USE_DATABASE == true, and fs_ for USE_DATABASE == false
Common.php only loads modules that are needed for the type of USE_DATABASE

2009-02-09
Made select.php use the modules to get lists of files
Modified all the modules to handle the returning of their own file types, lots of repetitive code but leaves it more open for expansion
All modules can return a list of files off of the filesystem now, instead of using a database
Replaced includes with absolute path and ROOT_PATH, this enables the site to exist in a completely different location from the settings file and index page.