@@ -121,69 +121,6 @@ class db_archive extends db_file
 		}
 		
 	}
-	
-	static function getInfo($file)
-	{
-		$fileinfo = array();
-		$paths = split('\\' . DIRECTORY_SEPARATOR, $filename);
-		$last_path = '';
-		foreach($paths as $i => $tmp_file)
-		{
-			if(file_exists($last_path . $tmp_file) || $last_path == '')
-			{
-				$last_path = $last_path . $tmp_file . DIRECTORY_SEPARATOR;
-			} else {
-				if(file_exists($last_path))
-					break;
-			}
-		}
-		$inside_path = substr($filename, strlen($last_path));
-		if($last_path[strlen($last_path)-1] == DIRECTORY_SEPARATOR) $last_path = substr($last_path, 0, strlen($last_path)-1);
-		
-		$info = $GLOBALS['getID3']->analyze($last_path);
-		
-		if($inside_path != '')
-		{
-			if(isset($info['zip']) && isset($info['zip']['central_directory']))
-			{
-				foreach($info['zip']['central_directory'] as $i => $file)
-				{
-					if($file['filename'] == $inside_path)
-					{
-						$fileinfo['Filepath'] = $filename;
-						$fileinfo['Filename'] = basename($file['filename']);
-						if($file['filename'][strlen($file['filename'])-1] == '/')
-							$fileinfo['Filetype'] = 'FOLDER';
-						else
-							$fileinfo['Filetype'] = getExt($file['filename']);
-						if($fileinfo['Filetype'] === false)
-							$fileinfo['Filetype'] = 'FILE';
-						$fileinfo['Filesize'] = $file['uncompressed_size'];
-						$fileinfo['Compressed'] = $file['compressed_size'];
-						$fileinfo['Filemime'] = getMime($file['filename']);
-						$fileinfo['Filedate'] = date("Y-m-d h:i:s", $file['last_modified_timestamp']);
-					}
-				}
-			}
-		}
-		// look at archive properties for the entire archive
-		else
-		{
-			$fileinfo = array();
-			$fileinfo['Filepath'] = $last_path;
-			$fileinfo['Filename'] = basename($last_path);
-			$fileinfo['Compressed'] = $info['filesize'];
-			$fileinfo['Filetype'] = getFileType($last_path);
-			if(isset($info['zip']) && isset($info['zip']['uncompressed_size']))
-				$fileinfo['Filesize'] = $info['zip']['uncompressed_size'];
-			else
-				$fileinfo['Filesize'] = 0;
-			$fileinfo['Filemime'] = getMime($last_path);
-			$fileinfo['Filedate'] = date("Y-m-d h:i:s", filemtime($last_path));
-		}
-		
-		return $fileinfo;
-	}
 
 	static function add($mysql, $file, $archive_id = NULL)
 	{
@@ -215,24 +152,58 @@ class db_archive extends db_file
 		
 		if(isset($info['zip']) && isset($info['zip']['central_directory']))
 		{
+			$directories = array();
 			foreach($info['zip']['central_directory'] as $i => $file)
 			{
-				$fileinfo = array();
-				$fileinfo['Filepath'] = $last_path . DIRECTORY_SEPARATOR . str_replace('/', DIRECTORY_SEPARATOR, $file['filename']);
-				$fileinfo['Filename'] = basename($file['filename']);
-				if($file['filename'][strlen($file['filename'])-1] == '/')
-					$fileinfo['Filetype'] = 'FOLDER';
-				else
-					$fileinfo['Filetype'] = getExt($file['filename']);
-				if($fileinfo['Filetype'] === false)
-					$fileinfo['Filetype'] = 'FILE';
-				$fileinfo['Filesize'] = $file['uncompressed_size'];
-				$fileinfo['Compressed'] = $file['compressed_size'];
-				$fileinfo['Filemime'] = getMime($file['filename']);
-				$fileinfo['Filedate'] = date("Y-m-d h:i:s", $file['last_modified_timestamp']);
-				
-				print 'Adding file in archive: ' . $fileinfo['Filepath'] . "\n";
-				$id = $mysql->set('archive', $fileinfo);
+				if(!in_array($file['filename'], $directories))
+				{
+					$directories[] = $file['filename'];
+					$fileinfo = array();
+					$fileinfo['Filepath'] = $last_path . DIRECTORY_SEPARATOR . str_replace('/', DIRECTORY_SEPARATOR, $file['filename']);
+					$fileinfo['Filename'] = basename($file['filename']);
+					if($file['filename'][strlen($file['filename'])-1] == '/')
+					{
+						$fileinfo['Filetype'] = 'FOLDER';
+						$fileinfo['Filesize'] = 0;
+						$fileinfo['Compressed'] = 0;
+					}
+					else
+					{
+						$fileinfo['Filetype'] = getExt($file['filename']);
+						$fileinfo['Filesize'] = $file['uncompressed_size'];
+						$fileinfo['Compressed'] = $file['compressed_size'];
+					}
+					if($fileinfo['Filetype'] === false)
+						$fileinfo['Filetype'] = 'FILE';
+					$fileinfo['Filemime'] = getMime($file['filename']);
+					$fileinfo['Filedate'] = date("Y-m-d h:i:s", $file['last_modified_timestamp']);
+					
+					print 'Adding file in archive: ' . $fileinfo['Filepath'] . "\n";
+					$id = $mysql->set('archive', $fileinfo);
+				}
+				// get folders leading up to files
+				$paths = split('/', $file['filename']);
+				unset($paths[count($paths)-1]); // remove last item either a file name or empty
+				$current = '';
+				foreach($paths as $i => $path)
+				{
+					$current .= $path . DIRECTORY_SEPARATOR;
+					if(!in_array($current, $directories))
+					{
+						$directories[] = $current;
+						$fileinfo = array();
+						$fileinfo['Filepath'] = $last_path . DIRECTORY_SEPARATOR . str_replace('/', DIRECTORY_SEPARATOR, $current);
+						$fileinfo['Filename'] = basename($current);
+						$fileinfo['Filetype'] = 'FOLDER';
+						$fileinfo['Filesize'] = 0;
+						$fileinfo['Compressed'] = 0;
+						$fileinfo['Filemime'] = getMime($file['filename']);
+						$fileinfo['Filedate'] = date("Y-m-d h:i:s", $file['last_modified_timestamp']);
+						
+						print 'Adding directory in archive: ' . $fileinfo['Filepath'] . "\n";
+						$id = $mysql->set('archive', $fileinfo);
+					}
+				}
 			}
 		}
 		
@@ -252,7 +223,7 @@ class db_archive extends db_file
 		// print status
 		if( $archive_id != NULL )
 		{
-			print 'Modifying archive: ' . $file . "\n";
+			print 'Modifying archive: ' . $fileinfo['Filepath'] . "\n";
 			
 			// update database
 			$id = $mysql->set('archive', $fileinfo, array('id' => $archive_id));
@@ -261,7 +232,7 @@ class db_archive extends db_file
 		}
 		else
 		{
-			print 'Adding archive: ' . $file . "\n";
+			print 'Adding archive: ' . $fileinfo['Filepath'] . "\n";
 			
 			// add to database
 			$id = $mysql->set('archive', $fileinfo);
