@@ -20,7 +20,7 @@ $count = 0;
 $error = '';
 // get all the possible types for a list from templates directory
 $type_files = array();
-$files = fs_file::get(NULL, array('dir' => LOCAL_ROOT . LOCAL_DEFAULT), $count, $error, true);
+$files = fs_file::get(NULL, array('dir' => LOCAL_ROOT . LOCAL_DEFAULT, 'limit' => 32000), $count, $error, true);
 foreach($files as $i => $type_file)
 {
 	if ($type_file['Filename'][0] != '.' && !is_dir($files[$i]['Filepath']))
@@ -29,7 +29,7 @@ foreach($files as $i => $type_file)
 
 if(LOCAL_TEMPLATE != LOCAL_DEFAULT)
 {
-	$files = fs_file::get(NULL, array('dir' => LOCAL_ROOT . LOCAL_TEMPLATE), $count, $error, true);
+	$files = fs_file::get(NULL, array('dir' => LOCAL_ROOT . LOCAL_TEMPLATE, 'limit' => 32000), $count, $error, true);
 	foreach($files as $i => $type_file)
 	{
 		if ($type_file[0] != '.' && !is_dir($files[$i]['Filepath']))
